# skeleton

./: .gitignore  pom.xml
akka/: README.md  pom.xml
akka/src/main/java/com/asura/akka/: AkkaConfig.java  AppConfiguration.java  CacheProxyActor.java  GreetingActor.java  GreetingService.java  SpringActorProducer.java  SpringExtension.java
akka/src/main/java/com/asura/akka/distributeddata/: AkkaMapManager.java  Cached.java  Command.java  Evict.java  ForwardActor.java  GetFromCache.java  InternalCommand.java  InternalGetResponse.java  InternalUpdateResponse.java  (+2 more)
akka/src/main/resources/: application.conf  application.conf.bak  application.yml.bak
akka/src/test/java/com.asura.akka/: SpringAkkaIntegrationTest.java
cache/: pom.xml
common/: pom.xml
dao/: pom.xml
dao/src/main/resources/mapper/: FileMapper.xml
grpc-client/: pom.xml
grpc-client/rust-client/: Cargo.toml  README.md  build.rs
grpc-client/rust-client/src/: main.rs
grpc-client/src/main/java/com/asura/grpcclient/: GrpcClientApplication.java
grpc-client/src/test/java/com/asura/grpcclient/: GrpcClientApplicationTests.java
grpc-proto/: pom.xml
grpc-proto/src/main/proto/: hello.proto
grpc-server/: pom.xml
grpc-server/src/main/java/com/asura/grpcserver/: GrpcServerApplication.java
init/: datasource.sql
open-api/: pom.xml
server/: pom.xml
server/src/main/java/com/asura/skeleton/: Shutdown.java  SkeletonApplication.java
server/src/main/resources/: application.yaml  assembly.xml  logback-spring.xml
server/src/test/java/: Test.java
server/src/test/resources/: application.yaml
(+42 files in other folders)
